# coding-agent-cli

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
coding-agent/: README.md  main.py  pyproject.toml
coding-agent/agent/: agent.py  cmd.py  context.py  designer.py  events.py  pipeline.py  planning.py  prompts.py
coding-agent/config/: settings.py
coding-agent/llm/: azure_anthropic.py  azure_openai.py  base.py  openai_gateway.py  openai_usage.py  registry.py
coding-agent/mcpbridge/: client.py  enrichment.py  redis_cache.py
coding-agent/scripts/: audit_tools.py  verify_gateway_local.py
coding-agent/server/: app.py  canvas.py
coding-agent/templates/: base_flow.json  starter-pack.md
coding-agent/tests/: test_canvas.py  test_cmd.py  test_context.py  test_designer.py  test_llm_base.py  test_mcp_client.py  test_node_check.py  test_openai_gateway.py  test_pipeline.py  test_planning.py  test_settings.py  test_tool_repair.py  test_validation.py
langflow-mcp/: package-lock.json
langflow-mcp/src/__tests__/mcp/: composite-tools.test.ts  composite-wiring.test.ts  validation.test.ts
langflow-mcp/src/mcp/: composite-tools.ts  server.ts  tools.ts  validation.ts
langflow-mcp/src/services/: langflow-client.ts
langflow-mcp/src/types/: index.ts
scripts/: start-langflow-mcp.sh  start-web.sh
web/: README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/copilotkit/: route.ts
web/app/api/copilotkit/[[...path]]/: route.ts
